Fix spacing after parse

--- a/css/main.css
+++ b/css/main.css
@@ -23,12 +23,56 @@ body {
   margin: 0;
 }
 
-img {
-  display: block;
-  width: 100%;
+.card-body h2 {
+  font-weight: normal;
+  margin-bottom: 0;
+}
+
+.card-body p {
+  margin-top: 0;
 }
 
 .cards {
+  list-style-type: none;
   display: flex;
   flex-direction: column;
+  margin: .75rem;
+  padding: 0;
+}
+
+.card-img img {
+  display: block;
+  width: 100%;
+  width: 50px;
+  margin: .1em auto;
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  .cards {
+    flex-direction: row;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
 }
